# cusf-standalone-predictor

./: ._index.php  .gitignore  .index.php.swn  .index.php.swo  AUTHORS  CREDITS  README  README.markdown  README.md  ajax.php  auto_prediction  automatic_forecast_error_log.txt  churchill_forecasts.kml  clear-pydap-cache-cronjob.sh  do_auto_prediction.py  flight_path.csv  flight_path.kml  graph.py  index.php  index2.php  new.csv  one_off_prediction  predict.py  requirements.txt  style.css  test.raw_grib  valid_model_run  valid_time_update_errorlog.txt
cron/: clear-pydap-cache-cronjob.sh  crontab-example  prune-predictions-cronjob.sh
decoded_gribs/: 2010052612_009_+38.0_+44.0_-004.0_+002.0.decoded_grib  2010052612_009_+38.0_+44.0_-004.0_+002.0.raw_grib  2010052612_009_+49.0_+55.0_-003.0_+003.0.decoded_grib  2010052612_012_+38.0_+44.0_-002.0_+004.0.decoded_grib  2010052612_012_+38.0_+44.0_-004.0_+002.0.decoded_grib  2010052612_012_+49.0_+55.0_-003.0_+003.0.decoded_grib  2010052612_015_+38.0_+44.0_-002.0_+004.0.decoded_grib  2010052612_015_+49.0_+55.0_-003.0_+003.0.decoded_grib  2010052612_021_+47.0_+53.0_+000.0_+006.0.decoded_grib  2010052612_024_+47.0_+53.0_+000.0_+006.0.decoded_grib  2010052612_027_+47.0_+53.0_+000.0_+006.0.decoded_grib  test.raw_grib  (+14 more)
pred_src/: .gitignore  CMakeLists.txt  Makefile  altitude.c  altitude.h  cmake_install.cmake  pred  pred.c  pred.h  run_model.c  run_model.h
pred_src/ini/: README  iniparser.c  iniparser.h
pred_src/util/: gopt.c  gopt.h  random.c  random.h
pred_src/wind/: wind_file.c  wind_file.h  wind_file_cache.c  wind_file_cache.h
(+54 files in other folders)
